# Oxide-Tech-IDE

./: LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
aizen/Features/Terminal/Infrastructure/Ghostty/: AizenTerminalSurfaceView.swift
benches/: context_bench.rs
crates/context-compiler/: Cargo.toml  build.rs
crates/context-compiler/src/: lib.rs  parser.rs  steno.rs
crates/context-compiler/src/tree-sitter-parsers/src/: parser.c
crates/core/: Cargo.toml
crates/core/src/: approvals.rs  lib.rs  plain_text_processor.rs
crates/optio/: Cargo.toml
crates/optio/src/: dag.rs  executor.rs  lib.rs  loop_engine.rs  oscillation.rs  scheduler.rs  visual_tester.rs
crates/superhq/: Cargo.toml
crates/superhq/src/: errors.rs  lib.rs  server.rs
crates/superhq/src/sandbox/: manager.rs  mod.rs  service.rs
crates/vibe-kanban/: Cargo.toml
crates/vibe-kanban/frontend/: TimelineInspector.tsx
crates/vibe-kanban/src/: api.rs  lib.rs  quic_config.rs
crates/vibe-kanban/src/db/models/: ast.rs  code_node.rs  errors.rs  mod.rs  task.rs
crates/vibe-kanban/src/relay/: mcp_tunnel.rs  mod.rs  webrtc.rs
crates/vibe-kanban/src/worktree_manager/: worktree_manager.rs
polypore/: Cargo.toml  build.rs
polypore/plugins/editor/: component.tsx
polypore/proto/: medulla.proto
polypore/src/: lib.rs  secret_broker.rs
references/nexuside/: README.md  index.html  metadata.json  server.ts
references/nexuside/src/: App.tsx  data.ts  index.css  types.ts
references/nexuside/src/components/: AIChatPanel.tsx  BottomPanel.tsx  ExplorerPanel.tsx  TopBar.tsx
references/tauri-coder-ide/: README.md  index.html  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
references/tauri-coder-ide/src/: App.tsx  data.ts  index.css  types.ts
references/tauri-coder-ide/src/components/ast/: ASTViewer.tsx
references/tauri-coder-ide/src/components/editor/: CodeEditor.tsx  EditorToolbar.tsx
references/tauri-coder-ide/src/components/layout/: BottomPanels.tsx  MainLayout.tsx  Sidebar.tsx  StatusBar.tsx
references/tauri-coder-ide/src/components/terminal/: Terminal.tsx
references/tauri-coder-ide/src/services/: api.ts
references/tauri-coder-ide/src/state/: compilationStore.ts  editorStore.ts  settingsStore.ts
references/tauri-coder-ide/src/types/: compilation.ts  editor.ts
references/tauri-local-ide/: README.md  index.html  metadata.json  package-lock.json  package.json  server.ts
references/tauri-local-ide/server/: languageIntelligence.ts  orchestrator.ts  productivityServices.ts  sandboxing.ts
references/tauri-local-ide/src/: App.tsx  index.css
references/tauri-local-ide/src/components/ast/: ASTViewer.tsx
references/tauri-local-ide/src/services/: api.ts  tauri.ts
references/tauri-local-ide/src/state/: chatStore.ts  compilationStore.ts  editorStore.ts  gitStore.ts  settingsStore.ts  skillsStore.ts
references/tauri-local-ide/src/types/: index.ts
references/tauri-local-ide/src/utils/: theme.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/context-compiler/: Cargo.toml  build.rs
src-tauri/crates/context-compiler/src/: parser.rs
src-tauri/crates/core/src/: errors.rs  telemetry.rs
src-tauri/crates/optio/: Cargo.toml
src-tauri/crates/optio/src/: dag.rs  dag_executor.rs  lib.rs
src-tauri/crates/optio/tests/: unit_tests.rs
src-tauri/crates/polypore/: Cargo.toml
src-tauri/crates/polypore/src/: askpass_broker.rs  lib.rs  secret_broker.rs
src-tauri/crates/superhq/: Cargo.toml
src-tauri/crates/superhq/src/: cleanup.rs  executor.rs  lib.rs
src-tauri/crates/superhq/src/pty_adapter/: mod.rs
src-tauri/crates/superhq/src/sandbox/: manager.rs  service.rs
src-tauri/crates/vibe-kanban/: Cargo.toml
src-tauri/crates/vibe-kanban/src/: broadcaster.rs  h3_server.rs  lib.rs  sse.rs
src-tauri/crates/vibe-kanban/src/db/models/: ast.rs  mod.rs  task.rs
src-tauri/crates/vibe-kanban/src/relay/: webrtc.rs
src-tauri/crates/vibe-kanban/src/worktree_manager/: worktree_manager.rs
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  utils.rs
src-tauri/src/handlers/: file_ops.rs  git_async.rs  hardware_daemon.rs  http_proxy.rs  process.rs  rag.rs  system.rs
src/components/: index.ts
src/components/ai/: AIChatPanel.tsx  AIFloatingPrompt.tsx  MultiAgentCoordinator.tsx  NeuralDebugger.tsx  SkillsOrchestrator.tsx  TaskHUD.tsx
src/components/ast/: ASTViewer.tsx  ASTVisualizer.tsx
src/components/common/: ErrorBoundary.tsx  LoadingSpinner.tsx  Modal.tsx  SplitPane.tsx  Tabs.tsx  Tooltip.tsx
src/components/compilation/: DiagnosticsPanel.tsx
src/components/editor/: CodeEditor.tsx  EditorTabs.tsx  EditorToolbar.tsx
src/components/extensions/: ExtensionManager.tsx
src/components/fileExplorer/: FileContextMenu.tsx  FileTree.tsx  FileTreeNode.tsx  useFileSystem.ts
src/components/git/: DiffViewer.tsx  GitPanel.tsx
src/components/hardware/: MQTT5Client.tsx  SerialTerminal.tsx
src/components/layout/: HarpoonBuffers.tsx  MainLayout.tsx  Omnibar.tsx  SettingsModal.tsx  StatusBar.tsx  ToolWindowContent.tsx  ToolWindowPanel.tsx  ToolWindowStripe.tsx  TopNavigationBar.tsx  TransientOverlay.tsx  useLayoutState.ts
src/components/mcp/: MCPExplorer.tsx
src/components/previews/: BackendTester.tsx  PreviewContainer.tsx
src/components/terminal/: TerminalPanel.tsx
src/constants/: colors.ts  endpoints.ts  shortcuts.ts  ui.ts
src/hooks/: useAST.ts  useCompilation.ts  useDebounce.ts  useDragResize.ts  useKeyboardShortcuts.ts  useSystemStats.ts  useTelemetryStream.ts  useWebSocket.ts
src/services/: api.ts  extensionLoader.ts  monaco.ts  tauri.ts  websocket.ts
src/state/: astStore.ts  compilationStore.ts  editorStore.ts  extensionStore.ts  fileSystemStore.ts  settingsStore.ts
src/store/: swarmSlice.ts
src/types/: api.ts  ast.ts  compilation.ts  editor.ts  index.ts
src/utils/: aiClient.ts  astParser.ts  compilerGuard.ts  theme.ts
tests/: chaos_tests.rs  integration_tests.rs  security_tests.rs
(+15 files in other folders)
