[package]
name = "polypore"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
surrealdb = "1.0.0-beta.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "1.5"
anyhow = "1.0.86"

[build-dependencies]
tonic-build = "0.8"
