[package]
name = "context-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
uuid = { version = "1.23", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core = { path = "../core" }
tempfile = "3"
petgraph = "0.6"
