[package]
name = "context-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.22"
uuid = { version = "1.23", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core = { path = "../core" }
thiserror = "1.0"
log = "0.4"
anyhow = "1.0"
petgraph = "0.6"

[build-dependencies]
cc = "1.0"
