[package]
name = "optio"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
petgraph = "0.6"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.9"
string-interner = "0.14.0"
jaro-winkler = "0.2.0"
core = { path = "../core" }
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
