[package]
name = "superhq"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
anyhow = "1.0.86"
