[package]
name = "vibe-kanban"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webrtc = "0.4"
spake2 = "0.2"
rand = "0.8"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.9"
base64 = "0.13"
p256 = { version = "0.10", features = ["ecdh"] }
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.9"
surrealdb = "1.0.0-beta.9"
uuid = { version = "1", features = ["v4"] }
context-compiler = { path = "../context-compiler" }
core = { path = "../core" }
thiserror = "1.0"
async-trait = "0.1"
git2 = "0.18"
tempfile = "3"
