[package]
name = "context-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.23", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core = { path = "../core" }
tempfile = "3"
petgraph = "0.6"
tree-sitter = "=0.20.10"
tree-sitter-rust = "=0.20.3"
anyhow = "1.0"

[build-dependencies]
cc = "1.0"
tree-sitter = "=0.20.10"
tree-sitter-rust = "=0.20.3"
