[package]
name = "context-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.23", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core = { path = "../core" }
tempfile = "3"
petgraph = "0.8.3"
tree-sitter = "0.24.2"
tree-sitter-rust = "0.24.2"
anyhow = "1.0"

[build-dependencies]
cc = "1.0"
tree-sitter = "0.26.11"
tree-sitter-rust = "0.24.2"
